@@ -398,8 +398,13 @@ public class DevModeCommandLineBuilder {
             jvmOptionsBuilder.add("enable-preview");
         }
 
+        //Useful for AgentBasedModulesReconfigurer; should we use -agent and load it explicitly?
+        jvmOptionsBuilder.addXxOption("EnableDynamicAgentLoading", "true");
+
         setJvmOptions();
         args.add("-Djava.util.logging.manager=org.jboss.logmanager.LogManager");
+        args.add("--add-opens=java.base/java.lang.invoke=ALL-UNNAMED");
+        args.add("--add-exports=java.base/jdk.internal.module=ALL-UNNAMED");
 
         outputDir.mkdirs();
 
